[gd_scene load_steps=4 format=3 uid="uid://b5qlnest321o7"]

[ext_resource type="FontFile" uid="uid://cd2btctqwtg0e" path="res://Art/ModernDOS9x16.ttf" id="1_5sqnl"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_l7plb"]
[ext_resource type="Texture2D" uid="uid://brw4irnem1ass" path="res://Art/game_off_main_menu.png" id="2_4tq3w"]

[node name="Main Menu" type="CanvasLayer"]
script = ExtResource("1_l7plb")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -34.0
offset_top = -13.0
offset_right = 1322.0
offset_bottom = 735.0
color = Color(0.105882, 0.109804, 0.113725, 1)

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_right = 1280.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.27451, 0.282353, 0.305882, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_5sqnl")
theme_override_font_sizes/font_size = 100
text = "Erase the Secret"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="."]
texture_filter = 1
offset_left = 150.0
offset_top = 171.0
offset_right = 472.0
offset_bottom = 338.0
theme_override_colors/font_hover_pressed_color = Color(0.945098, 0.054902, 0.0862745, 1)
theme_override_colors/font_hover_color = Color(0.945098, 0.054902, 0.0862745, 1)
theme_override_colors/font_pressed_color = Color(0.945098, 0.054902, 0.0862745, 1)
theme_override_colors/font_focus_color = Color(0.945098, 0.054902, 0.0862745, 1)
theme_override_colors/font_color = Color(0.27451, 0.282353, 0.305882, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_5sqnl")
theme_override_font_sizes/font_size = 64
text = "Play"

[node name="HowToPlayButton" type="Button" parent="."]
texture_filter = 1
offset_left = 681.0
offset_top = 171.0
offset_right = 1130.0
offset_bottom = 356.0
theme_override_colors/font_hover_pressed_color = Color(0.945098, 0.054902, 0.0862745, 1)
theme_override_colors/font_hover_color = Color(0.945098, 0.054902, 0.0862745, 1)
theme_override_colors/font_pressed_color = Color(0.945098, 0.054902, 0.0862745, 1)
theme_override_colors/font_focus_color = Color(0.945098, 0.054902, 0.0862745, 1)
theme_override_colors/font_color = Color(0.27451, 0.282353, 0.305882, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_5sqnl")
theme_override_font_sizes/font_size = 64
text = "How to Play"

[node name="Label2" type="Label" parent="."]
offset_left = 1015.0
offset_top = 691.0
offset_right = 1268.0
offset_bottom = 714.0
text = "License: godotengine.org/license"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(604, 520)
scale = Vector2(4, 4)
texture = ExtResource("2_4tq3w")

[node name="HighScore" type="Label" parent="."]
texture_filter = 1
offset_top = 115.0
offset_right = 1280.0
offset_bottom = 165.0
theme_override_colors/font_color = Color(0.27451, 0.282353, 0.305882, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_5sqnl")
theme_override_font_sizes/font_size = 32
text = "High Score: "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
